# CppPolygons

./: .gitignore  CMakeLists.txt  exec.py  exfoliated_interface_percolation.cpp  exfoliated_interface_percolation_polygons.cpp  int_an.py  mesher.cpp  options.ini  reparsed_crosses.cpp  reparsed_minmax.cpp  run_crystallinity.py  tactoid_polygons.cpp  tactoid_polygons_single.cpp  test.cpp  test2.cpp  test3.cpp  volAnalyzer.py
geofiles/: 1.geo
include/: csg_printer_polygons.hpp  tactoid.hpp
include/geometries/: polygonal_cylinder.hpp
include/mesh_generation/: mesh.hpp  mesh_generator.hpp
src/: CSGPrinterCircles.cpp  CSGPrinterCircles.hpp  checkPercolation.cpp  checkPercolation.hpp  csg_printer_polygons.cpp  det.cpp  det.hpp  line_segment.cpp  line_segment.hpp  main.cpp  mainExfoliation.cpp  mainExfoliation2.cpp  mainFromTactoid.cpp  mainPercolation.cpp  plane.cpp  plane.hpp  point.cpp  polygon.cpp  polygon.hpp  polygonal_cylinder.cpp  polygonal_cylinder.hpp  polygonal_cylinder_in_the_shell.cpp  polygonal_cylinder_in_the_shell.hpp  printToCSG.cpp  printToCSG2.cpp  printToCSGCircles.cpp  settings_parser.cpp  settings_parser.hpp  tactoid.cpp  vector.cpp  vector.hpp
src/geometries/: line_segment.cpp  plane.cpp  polygon.cpp  polygonal_cylinder.cpp  polygonal_cylinder.hpp
src/mains/: main_exfoiliated_interface.cpp  main_exfoliated.cpp  main_exfoliated_interface.cpp  main_exfoliated_interface_percolation.cpp  main_exfoliated_shell.cpp  test.cpp
src/mains/old/: mainExfoliation.cpp
src/mesh_generation/: mesh.cpp  mesh_generator.cpp
src/percolation/: percolation_checker.cpp  percolation_checker.hpp
tmp/: options.ini
